cargo-features = ["edition2021"]

[package]
name = "monitor"
version = "0.1.0"
authors = ["Yarot Kell <mechild02@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
tokio = { version = "1.12.0", features = ["full"] }
serde_derive = "1.0.130"
serde = "1.0.130"
toml = "0.5.8"
lazy_static = "1.4.0"
log = "0.4.14"
fern = "0.6.0"
chrono = "0.4.19"

[dependencies.serenity]
default-features = false
features = [
   "builder",
   "cache",
   "client",
   "collector",
   "framework",
   "gateway",
   "http",
   "model",
   "standard_framework",
   "utils",
   "voice",
   "rustls_backend",
]
version = "0.10.9"
